--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <button class="btn-primary">Explore More</button>
    </div>
-        <img class="img-banner" src="images/banner.png" alt="">
+        <img  src="images/banner.png" alt="">
 </div>
   </header>
   <main>
