--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <!-- header start -->
 <nav>
     <h3 class="nav-title">G3 Architects</h3>
     <ul>
@@ -27,7 +28,22 @@
         <img  src="images/banner.png" alt="">
 </div>
   </header>
+  <!-- header end -->
   <main>
+    <section class="teams-container">
+        <div class="teams-img-container">
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+        </div>
+        <div class="teams-content">
+            <h3 class="teams-title"><span class="quick-list">Quick list</span> <span>of Our</span><br> <span class="text-features">Features</span></h3>
+            <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+
+        </div>
+    </section>
 
   </main>
   <footer>
