--- a/index.html
+++ b/index.html
@@ -44,6 +44,35 @@
 
         </div>
     </section>
+    <section class="features">
+        <div class="featuers-content">
+           <h3 class="section-title">Features you will <br> love & enjoy</h3>
+           <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+           <div class="card">
+            <h3>Dexktop & Mobile Version</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+           </div>
+           <div class="card">
+            <h3>Dexktop & Mobile Version</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+           </div>
+           <div class="card">
+            <h3>Dexktop & Mobile Version</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+           </div>
+           <div class="card">
+            <h3>Dexktop & Mobile Version</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+           </div>
+        </div>
+        <div class="features-images">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ Year</h2>
+                    <p>Experience</p>
+                </div>
+        </div>
+    </section>
 <section class="facts">
     <h3 class="section-title">Some Facts</h3>
     <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -83,7 +112,9 @@
 </section>
   </main>
   <footer>
-
+<div class="footer-section">
+    <p class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
+</div>
   </footer>
 </body>
 </html>
