complete footer section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </main>
   <footer>
 <div class="footer-section">
-    <p class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
+    <p class="text-light-gray" style="padding-top: 50px; font-size: 20px;">All rights reserved copyright@2023 startup landing page design</p>
 </div>
   </footer>
 </body>
